# kbd-synth-min

./: Cargo.toml  index.html
.github/workflows/: gh-pages.yml  release-on-merge.yml
src/: lib.rs  libs.rs  main.rs
src/audio/: core.rs
src/gui/: app.rs
src/libs/: adsr.rs  osc.rs  shared_bus.rs  synth.rs
src/synth/: adsr.rs  engine.rs  filter.rs  note.rs  osc.rs  shared_bus.rs
worklet/: synth-processor.js
