[package]
name = "kbd_synth_min"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crossbeam = "0.8.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
eframe = { version = "0.32.1", default-features = false, features = ["glow", "default_fonts"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.16.0"
eframe = { version = "0.32.1", default-features = false, features = ["glow", "default_fonts", "wayland"] }
